Build: remove DWARF symbol table from linux executable
FossilOrigin-Name: 387e568ac26f42193669480ecd0f7ae358f03cf5efa7c515b311095fcaaf75e3

--- a/social/Makefile
+++ b/social/Makefile
@@ -14,4 +14,4 @@
 .PHONY: linux
 
 linux:
-	GOOS=linux GOARCH=amd64 go build -tags osusergo,netgo -trimpath .
+	GOOS=linux GOARCH=amd64 go build -tags osusergo,netgo -trimpath -ldflags "-w" .
